@@ -55,10 +55,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
         <configuration>
-          <argLine>${argLine} --illegal-access=permit
-                    --add-opens java.base/java.lang=ALL-UNNAMED
-                    --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
-                    -Dillegal-access=permit</argLine>
+          <argLine>${argLine} --add-opens java.base/java.lang=ALL-UNNAMED
+                    --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
